# prodigy_compiler_support_public

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run_prefetcher_analysis.sh  run_prefetcher_codegen.sh  run_prefetcher_complex_2.sh  run_prefetcher_complex_3.sh
RangedIndirectionPass/: CMakeLists.txt  README  RangedIndirection.cpp  bfs-ir.bc
SinValIndirectionPass/: CMakeLists.txt  README  SinValIndirection.cpp
prefetcher/: .gitignore  CMakeLists.txt  RangedIndirection.cpp  SinValIndirection.cpp  prefetcher.cpp  prefetcher.hpp  prefetcher_codegen.cpp  rangedIndirectionPass.cpp  rangedIndirectionTestProgram.c  util.hpp
runtime/: CMakeLists.txt
runtime/default/: CMakeLists.txt  prefetcher_default_rt.cpp  prefetcher_rt.cpp
runtime/dummy/: CMakeLists.txt  prefetcher_dummy_rt.cpp
runtime/profiler/: CMakeLists.txt  prefetcher_profiler_rt.cpp
test/: #array.c#  array  array.bc  array.c  array.c~  array.ll  array_2.c  array_2_func.c  array_3.c  array_complex_indirection_2.cpp  array_complex_indirection_3.cpp  hello
